Thu Oct 23 19:31:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a pref name.

Thu Oct 23 19:30:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimMainWindow.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added buddy list prefs. Not all work yet.

Wed Oct 22 23:34:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - The accounts window's listview resizes a bit nicer on larger
	    resolutions now.

Wed Oct 22 22:58:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimMainWindow.cpp:
	  - Closing the window on a conversation no longer closes Gaim.

Wed Oct 22 22:45:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Default to the Buddy List preference page when entering the
	    Preferences dialog.

Wed Oct 22 22:41:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* src/QGaimRequest.cpp:
	* src/main.cpp:
	  - Removed the QGaim class, and added QGaimMainWindow. This cleans up
	    the code just a tad, and will allow for some startup progress stuff.

Wed Oct 22 20:52:15 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	* gaim.pro:
	  - We're now using libopie!

Mon Oct 20 22:13:34 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimInputDialog.cpp:
	  - Fixed a compiler error.

Mon Oct 20 20:56:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Setup the base framework for the preference pages.

Mon Oct 20 20:03:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp: